--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 </div>
 <div class="middle">
   <div class="profile">
-    <img class="my"src="png/123.jpg" alt="my foto">
+    <img class="my"src="https://sun9-53.userapi.com/impg/a3EdGS6lECKs3dwF2LjD53_oz2Fse5MOgXx8zQ/0Zrzc3ZjF4o.jpg?size=808x1080&quality=96&sign=8eb42ccc83594662c135025919df9e6d&type=album" alt="my foto">
     <h2>Hello.</h2>
     <p class="opisanie">This is my page-site which I created myself while learning programming on the site Udemi.com🐱‍👤</p>
   </div>
